--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">20221024-CarlosMendez-NYCSchools</string>
+    <string name="critical_reading_score">Critical Reading Score:</string>
+    <string name="math_score">Math Score:</string>
+    <string name="writing_score">Writing Score:</string>
 </resources>
